--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
+                        <li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
                     </ul>
                 </li>
                 {% else %}
