--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,7 +9,7 @@
     <p>
         {% if user.name %}{{ user.name }}{% endif %}
         {% if user.location %}
-            From<a href="http://map.baidu.com/?q={{ user.location }}">{{ user.location}}</a>
+            From<a href="http://gaode.com/search?query={{ user.location }}">{{ user.location}}</a>
         {% endif %}
     </p>
     {% endif %}
@@ -19,5 +19,13 @@
     {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
     <p>Member since {{ moment(user.member_since).format('L')}}. Last seen{{ 
     moment(user.last_seen).fromNow() }}.</p>
+    <p>
+        {% if user == current_user %}
+        <a class="btn btn-default" href="{{ url_for('.edit_profile')}}">Edit Profile</a>
+        {% endif %}
+        {% if current_user.is_administrator() %}
+        <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin',id=user.id)}}">Edit Profile [Admin]</a>
+        {% endif %}
+    </p>
 </div>
 {% endblock %}
