--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/vnd.microsoft.icon">
 <link rel="icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/vnd.microsoft.icon">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css')}}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css')}}">
 {% endblock %}
 
 {% block navbar %}
