--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,19 +1,20 @@
-{% macro pagination_widget(pagination, endpoint, fragment='') %}
-<ul class="pagination">
+{% macro pagination_widget(pagination,endpoint) %}
+<ul class="pagiantion">
     <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
-        <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
+        <a href="{% if pagination.has_prev %}{{ url_for(endpoint,page = pagination.prev_num,**kwargs)}}
+            {% else %}#{% endif %}">
             &laquo;
         </a>
     </li>
     {% for p in pagination.iter_pages() %}
         {% if p %}
-            {% if p == pagination.page %}
+            {% if p == pagination %}
             <li class="active">
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint,page = p,**kwargs) }}">{{ p }}</a>
             </li>
             {% else %}
             <li>
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint,page = p,**kwargs) }}">{{ p }}</a>
             </li>
             {% endif %}
         {% else %}
@@ -21,9 +22,11 @@
         {% endif %}
     {% endfor %}
     <li{% if not pagination.has_next %} class="disabled"{% endif %}>
-        <a href="{% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
+        <a href="{% if pagination.has_next %}{{ url_for(endpoint,
+            page = pagination.next_num,**kwargs) }}{% else %}#{% endif %}">
             &raquo;
         </a>
     </li>
 </ul>
 {% endmacro %}
+
