--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -56,3 +56,7 @@ dic.pagination  li .selected {
     background-color:blue;
     color:white;
 }
+
+.table.followers tr {
+    border-bottom:1px solid #e0e0e0;
+}
