--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,7 +1,7 @@
-{% macro pagination_widget(pagination,endpoint) %}
+{% macro pagination_widget(pagination,endpoint,fragment='') %}
 <ul class="pagiantion">
     <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
-        <a href="{% if pagination.has_prev %}{{ url_for(endpoint,page = pagination.prev_num,**kwargs)}}
+        <a href="{% if pagination.has_prev %}{{ url_for(endpoint,page = pagination.prev_num,**kwargs)}}{{ fragment}}
             {% else %}#{% endif %}">
             &laquo;
         </a>
@@ -10,11 +10,11 @@
         {% if p %}
             {% if p == pagination %}
             <li class="active">
-                <a href="{{ url_for(endpoint,page = p,**kwargs) }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint,page = p,**kwargs) }}{{ fragment }}">{{ p }}</a>
             </li>
             {% else %}
             <li>
-                <a href="{{ url_for(endpoint,page = p,**kwargs) }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint,page = p,**kwargs) }}{{ fragment }}">{{ p }}</a>
             </li>
             {% endif %}
         {% else %}
@@ -23,7 +23,7 @@
     {% endfor %}
     <li{% if not pagination.has_next %} class="disabled"{% endif %}>
         <a href="{% if pagination.has_next %}{{ url_for(endpoint,
-            page = pagination.next_num,**kwargs) }}{% else %}#{% endif %}">
+            page = pagination.next_num,**kwargs) }}{{ fragment }}{% else %}#{% endif %}">
             &raquo;
         </a>
     </li>
