--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Flasky - Comment Moderation{% endblock %}
+{% block title%}Flasky - Comment Moderation{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page_content">
     <h1>Comment Moderation</h1>
 </div>
 {% set moderate = True %}
 {% include '_comments.html' %}
 {% if pagination %}
 <div class="pagination">
-    {{ macros.pagination_widget(pagination, '.moderate') }}
+    {{ macros.pagination_widget(pagination,'.moderate') }}
 </div>
 {% endif %}
 {% endblock %}
